--- a/src/components/Deck/Deck.css
+++ b/src/components/Deck/Deck.css
@@ -1,83 +1,11 @@
 #buttons-panel{
     background-color: #111111;
-    padding-left: 15px;
-    padding-right: 15px;
-    padding-bottom: 10px;
-    padding-top: 5px;
-    margin-top: -25px; 
+    padding: 5px 15px;
+    margin-bottom: 5px;
+    margin-top: -25px;
+    height: 50px;
 }
 .cards-panel{
-    padding: 80px 40px;
     padding-top: 140px;
-}
-.card-wrapper {
-    padding-top: 10px;
-    padding-bottom: 10px;
-}
-.cards-wrapper:focus {
-    outline: 0;
-}
-.card {
-    background: white;
-    width: 100%;
-    height: auto;
-    display: inline-block;
-    margin: auto;
-    border-radius: 5px;
-    position: relative;
-    text-align: center;
-    box-shadow: -1px 15px 30px -12px black;
-}
-.card__image {
-    position: relative;
-    width: inherit;
-    height: inherit;
-    border-top-left-radius: 5px;
-    border-top-right-radius: 5px;
-}
-
-.card__image--img{
-    width: inherit;
-    height: inherit;
-}
-
-.card__unit-stats {
-    background: #111111;
-    font-weight: 700;
-    border-bottom-left-radius: 5px;
-    border-bottom-right-radius: 5px;
-}
-.card__unit-stats a{
-    color: #ffe81f;
-}
-.card__unit-stats a:hover{
-    color: #ffe81f;
-}
-.card__unit-stats .one-third {
-    border-right: 1px solid #333333;
-    width: 50%;
-    float: left;
-    padding: 10px 15px;
-}
-.card__unit-stats .stat {
-    position: relative;
-    font-size: 24px;
-    margin-bottom: 10px;
-}
-.card__unit-stats .stat-value {
-    text-transform: uppercase;
-    font-weight: 400;
-    font-size: 12px;
-}
-.card__unit-stats .no-border {
-    border-right: none;
-} 
-.clearfix:after {
-    visibility: hidden;
-    display: block;
-    font-size: 0;
-    content: " ";
-    clear: both;
-    height: 0;
 }
   
